<resources>
    <string name="app_name">Street_Courts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="welcome_to_app">Welcome To Street Courts!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="description">Description</string>
    <string name="register">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="menu_users">Members</string>
    <string name="user_info">user info</string>
    <string name="temperature">Temperature loading...</string>
</resources>