<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="colman.android.streetcourts.feed.Details.MemberDetailsFragment">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/details_member_imgv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintBottom_toTopOf="@+id/details_name_txt"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/avatarsmith" />

            <TextView
                android:id="@+id/details_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:hint="@string/name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/details_id_txt"
                app:layout_constraintTop_toBottomOf="@+id/details_member_imgv" />

            <TextView
                android:id="@+id/details_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:hint="@string/id"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/details_phone_txt"
                app:layout_constraintTop_toBottomOf="@+id/details_name_txt" />

            <TextView
                android:id="@+id/details_phone_txt"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:hint="@string/phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/details_address_txt"
                app:layout_constraintTop_toBottomOf="@+id/details_id_txt" />

            <TextView
                android:id="@+id/details_address_txt"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginBottom="32dp"
                android:hint="@string/address"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_phone_txt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3">

        <Button
            android:id="@+id/details_user_post_list_btn"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:text="Posts" />

        <Button
            android:id="@+id/details_to_edit_btn"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:text="Edit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>