<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    app:cardBackgroundColor="#252525"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/postrow_image_imv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize8Precent"
            app:srcCompat="@drawable/avatarsmith" />

        <TextView
            android:id="@+id/postrow_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/name"
            android:text="Name:"
            android:textColor="#FF9800"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/postrow_category_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postrow_image_imv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postrow_area_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/address"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/postrow_category_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postrow_image_imv"
            app:layout_constraintTop_toBottomOf="@+id/postrow_name_tv" />

        <TextView
            android:id="@+id/postrow_category_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/category"
            android:text="Category:"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postrow_image_imv"
            app:layout_constraintTop_toBottomOf="@+id/postrow_name_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>