<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="colman.android.streetcourts.feed.EditPost.EditPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="100dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/edit_post_imgv"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/avatarsmith"
                app:srcCompat="@drawable/avatarsmith" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_post_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/area"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_post_area_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_post_category_dropdown"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:keyboardNavigationCluster="false">

                <AutoCompleteTextView
                    android:id="@+id/edit_post_category_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:padding="10dp"
                    android:paddingLeft="25dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp" />

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/address"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_post_address_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_post_description_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_post_cancel_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Cancel" />

            <Button
                android:id="@+id/edit_post_delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="#C10D0D"
                android:text="DELETE" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_post_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Save" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/edit_post_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/edit_post_camera_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginBottom="230dp"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <ImageButton
            android:id="@+id/edit_post_gallery_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:src="@android:drawable/ic_menu_gallery"
            app:layout_constraintBottom_toTopOf="@+id/edit_post_camera_btn"
            app:layout_constraintEnd_toEndOf="@+id/edit_post_camera_btn"
            app:layout_constraintStart_toStartOf="@+id/edit_post_camera_btn"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>